syntax = "proto3";

package share.p2p.shrex.nd;
import "pb/proof.proto";

message GetSharesByNamespaceRequest{
  bytes root_hash = 1;
  bytes namespace = 2;
}

message GetSharesByNamespaceResponse{
  StatusCode status = 1;
  repeated Row rows = 2;
}

enum StatusCode {
  INVALID = 0;
  OK = 1;
  NOT_FOUND = 2;
  INTERNAL = 3;
  NAMESPACE_NOT_FOUND = 4;
};

message Row {
  repeated bytes shares = 1;
  proof.pb.Proof proof = 2;
}
