syntax = "proto3";

package ipld.pb;

option go_package="github.com/celestiaorg/celestia-node/ipld/pb";

message MerkleProof {
  int64 start     = 1;
  int64 end       = 2;
  repeated bytes nodes = 3;
  bytes leaf_hash = 4;
}

message Share {
  bytes Data = 1;
  MerkleProof Proof = 2;
}
